# celloroom

./: README.md
dashboard/: firebase.json  pubspec.yaml
dashboard/.firebase/: hosting.YnVpbGQvd2Vi.cache
dashboard/lib/: main.dart
dashboard/lib/Dash_Activities/: Ac1.dart  Ac2.dart  Ac3.dart
dashboard/lib/commons/: theme.dart
dashboard/lib/model/: Cellulo.dart  Class.dart  Group.dart  Teacher.Dart  Trial.dart  cellulo.dart  menu.dart  student.dart  turn.dart
dashboard/lib/screens/: Debriefing.dart  Monitoring.Dart  bottom_nav_screen.dart  groupDashboard.Dart  groupDashboardDouble.dart  groupdashboardsole.dart  home_screen.dart  main_page.dart  screens.dart
dashboard/lib/widgets/: arrow.dart  celluloMap.Dart  countdown.dart  custom_app_bar.dart  group_List.dart  group_names.dart  hexagonPainter.Dart  linePainter.Dart  mapShapeMaker.dart  mapTablet.dart  menu_item_tile.dart  miniature.dart  showAlertDialog.Dart  sidebar_menu..dart
student/: .firebaserc  firebase.json  pubspec.yaml
student/.firebase/: hosting.YnVpbGQvd2Vi.cache
student/android/app/: CMakeLists.txt  build.gradle
student/android/app/src/debug/: AndroidManifest.xml
student/android/app/src/main/: AndroidManifest.xml
student/android/app/src/main/java/com/example/student/: MainActivity.java
student/android/app/src/main/kotlin/com/example/cellulo_test/: MainActivity.kt
student/android/app/src/main/res/values/: libx.xml
student/androidnew/: build.gradle
student/androidnew/app/: local.properties
student/lib/: main.dart  routes.dart  styles.dart
student/test/: widget_test.dart
(+96 files in other folders)
